--- a/client/maincontainer.ui
+++ b/client/maincontainer.ui
@@ -6,23 +6,65 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>400</width>
-    <height>300</height>
+    <width>698</width>
+    <height>537</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Form</string>
   </property>
+  <property name="styleSheet">
+   <string notr="true"/>
+  </property>
   <layout class="QHBoxLayout" name="horizontalLayout">
+   <property name="leftMargin">
+    <number>80</number>
+   </property>
+   <property name="topMargin">
+    <number>0</number>
+   </property>
+   <property name="rightMargin">
+    <number>0</number>
+   </property>
+   <property name="bottomMargin">
+    <number>0</number>
+   </property>
    <item>
-    <widget class="QLabel" name="label">
-     <property name="text">
-      <string>我是主容器</string>
+    <widget class="QWidget" name="mainContainerClassWidget_" native="true">
+     <property name="styleSheet">
+      <string notr="true">background:white;</string>
      </property>
+     <widget class="ltp::client::ProcessWidget" name="processWidget_" native="true">
+      <property name="geometry">
+       <rect>
+        <x>0</x>
+        <y>0</y>
+        <width>680</width>
+        <height>519</height>
+       </rect>
+      </property>
+      <property name="minimumSize">
+       <size>
+        <width>680</width>
+        <height>519</height>
+       </size>
+      </property>
+      <property name="styleSheet">
+       <string notr="true"/>
+      </property>
+     </widget>
     </widget>
    </item>
   </layout>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>ltp::client::ProcessWidget</class>
+   <extends>QWidget</extends>
+   <header>processwidget.h</header>
+   <container>1</container>
+  </customwidget>
+ </customwidgets>
  <resources/>
  <connections/>
 </ui>
